# PictrueView

./: CMakeLists.txt  PictureView.pro  PictureView.pro.user.a283a44  PictureView.pro.user.e13dbb3  README.md  app.qrc  archivehandler.cpp  canvascontrolpanel.cpp  configmanager.cpp  configmanager.h  imagewidget.cpp  imagewidget.h  imagewidget_archive.cpp  imagewidget_canvas.cpp  imagewidget_config.cpp  imagewidget_core.cpp  imagewidget_file.cpp  imagewidget_fileops.cpp  imagewidget_help.cpp  imagewidget_keyboard.cpp  imagewidget_menu.cpp  imagewidget_mouse.cpp  imagewidget_view.cpp  imagewidget_viewmode.cpp  libarchivehandler.cpp  libarchivehandler.h  libarchiveimageprovider.cpp  libarchiveimageprovider.h  main.cpp  platform_compat.h  thumbnailwidget.cpp  thumbnailwidget.h
translations/: PictureView_en_US.ts  PictureView_zh_CN.ts
